Added views and date to link. Refactored link controller and service with adding exception handling.